# quicksorts

./: Makefile.am  Makefile.in  README  aminclude_static.am  configure  configure.ac  lcg-seed.c  quicksorts-lcg-seed.dats  quicksorts.pc.in  unstable-qsort.c  unstable_qsort.c  unstable_qsort_r.c
quicksorts/: unstable-qsort.h  unstable-quicksort.h
quicksorts/internal/: quicksorts-common.h
tests/: test-big.c  test-int-patterns.c  test-typed-big.c  test-unstable-defaults-typed.in  test-unstable-defaults.in  test-unstable-insertion-random.in  test-unstable-median3-insertion-big.in  test-unstable-median3-insertion-typed.in  test-unstable-median3-insertion.in  test-unstable-median3-shell-big.in  test-unstable-median3-shell-typed.in  test-unstable-median3-shell.in  test-unstable-middle-insertion-typed.in  test-unstable-middle-insertion.in  test-unstable-middle-shell-typed.in  test-unstable-middle-shell.in  test-unstable-random-insertion-big.in  test-unstable-random-insertion-typed-big.in  test-unstable-random-insertion-typed.in  test-unstable-random-insertion.in  test-unstable-random-shell-big.in  test-unstable-random-shell-typed.in  test-unstable-random-shell.in  test-unstable_qsort.c  test-unstable_qsort.in  test-unstable_qsort_r.in
